[package]
name = "z_vrf"
version = "0.1.0"
edition = "2021"

[dependencies]
vercel_runtime = { version = "1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
starknet-crypto = "0.6.1"
starknet-ff = "0.3.7"
thiserror = "1.0.60"
dotenv = "0.15.0"
serde_json = "1.0"

# You can specify a library for shared logic here (optional)
[lib]
path = "src-rs/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "vrf"
path = "api/vrf.rs"